feat: OATUH2 GOOGLE 기본 로직 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,14 @@ spring:
     h2:
       console:
         enabled: true
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            scope:
+              - email
+              - profile
 
 jwt:
   issuer: yoseb95@gmail.com
