--- a/build.gradle
+++ b/build.gradle
@@ -37,3 +37,11 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+task bePrivate(type: Copy) {
+	copy {
+		from './BE-private'
+		include "*.yml"
+		into 'src/main/resources'
+	}
+}
