chore: 폴더 구조 변경 #2

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,15 +11,9 @@ spring:
     h2:
       console:
         enabled: true
-  security:
-    oauth2:
-      client:
-        registration:
-          google:
-            scope:
-              - email
-              - profile
+  profiles:
+    include: oauth
 
 jwt:
   issuer: yoseb95@gmail.com
-  secret_key: teamprojectscret
+  secret_key: teamprojectsecret
