--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "BE-private"]
     path = BE-private
-    url = git@github.com:side-project-a/BE-private.git
+    url = git@github.com:CocoTrip/BE-private.git
