--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.4'
 }
 
-group = 'com.example'
+group = 'io.cocotrip'
 version = '0.0.1-SNAPSHOT'
 
 java {
@@ -32,6 +32,13 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	implementation 'org.springframework.boot:spring-boot-starter-validation:3.3.0'
+
+	// AutoParams
+	testImplementation 'io.github.autoparams:autoparams:8.3.0'
+
+	// MongoDB
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 }
 
 tasks.named('test') {
@@ -41,7 +48,13 @@ tasks.named('test') {
 task bePrivate(type: Copy) {
 	copy {
 		from './BE-private'
-		include "*.yml"
+		include "appliction-*.yml"
 		into 'src/main/resources'
+	}
+
+	copy {
+		from './BE-private'
+		include "docker-*.yml"
+		into './'
 	}
 }
