--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,12 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+
+	// Validation
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+	// AutoParams
+	testImplementation 'io.github.autoparams:autoparams:8.3.0'
 }
 
 tasks.named('test') {
