--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,21 +1,19 @@
 spring:
-  datasource:
-    url: jdbc:h2:mem:cocotrip;MODE=MySQL
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
-
   jpa:
-    open-in-view: false
-    database-platform: org.hibernate.dialect.H2Dialect
-    hibernate:
-      ddl-auto: create
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+    defer-datasource-initialization: true
+    datasource:
+      url: jdbc:h2:mem:testdb
+      username: sa
+    h2:
+      console:
+        enabled: true
+  profiles:
+    include: oauth
 
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
-
-
-logging.level:
-  org.hibernate.SQL: info
+jwt:
+  issuer: yoseb95@gmail.com
+  secret_key: teamprojectsecret
