--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,12 +5,13 @@ spring:
       hibernate:
         format_sql: true
     defer-datasource-initialization: true
-    datasource:
-      url: jdbc:h2:mem:testdb
-      username: sa
-    h2:
-      console:
-        enabled: true
+
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:testdb
+    username: sa
+    password:
+
   profiles:
     include: oauth
 
